--- a/index.html
+++ b/index.html
@@ -27,34 +27,50 @@
   <section id="about">
     <div class="row">
       <div class="side">
-        <h2>About Me</h2>
-        <h5>Photo of me:</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-        <h3>More Text</h3>
-        <p>Lorem ipsum dolor sit ame.</p>
-        <div class="fakeimg" style="height:60px;">Image</div><br>
-        <div class="fakeimg" style="height:60px;">Image</div><br>
-        <div class="fakeimg" style="height:60px;">Image</div>
+        <h1>about me</h1><br>
+<!--    <h5>Photo of me:</h5>-->
+<!--    <div class="fakeimg" style="height:200px;">Image</div>-->
+<!--    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>-->
+        <h3>Education</h3><br>
+        <p style ="">Polytechnique Montréal — <i>BEng. Software Engineering (2025)</i><br><br>Collège Stanislas de Montréal — <i>high school and college diplomas (2021)</i></p>
+<!--    <div class="line" style="height:60px; background-image:url(./img/blur.png); color:white">Image</div><br>-->
+<!--    <div class="line" style="height:60px; background-image:url(./img/blur.png); color:white">Image</div><br>-->
+<!--    <div class="line" style="height:60px; background-image:url(./img/blur.png); color:white">Image</div>-->
       </div>
       <div class="main">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Dec 7, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <h1>significant projects</h1>
         <br>
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <h2>Digital Business Card Creator</h2>
+        <h5>HTML, CSS, JavaScript (December 2019 - February 2020)</h5><br>
+        <p>Worked in a group to create an online platform that uses user input to create a beautiful shareable homepage with links to different social media pages. </p>
+        <br>
+        <h2>Molecule Behaviour Simulator</h2>
+        <h5>Python (October 2021)</h5><br>
+        <p>Programmed an algorithm that simulates and redirects molecular collisions inside a container of variable volume, using complex list comprehensions and condition statements. </p>
+        <br>
+        <h2>Social Media Engagement Simulator — Python (November 2021)</h2>
+        <h5>Python (November 2021)</h5><br>
+        <p>Collaborated with a course partner to emulate a TikTok-like platform using object oriented programming principles such as abstract methods, polymorphism and operator overloading. </p>
+        <br>
+        <h2>Personal Homepage</h2>
+        <h5>HTML, CSS (December 2021 - January 2022)</h5><br>
+        <p>Built and deployed a website that serves as a portfolio and resume, using load-in animations and hover effects to produce dynamic interactions. </p>
+        <br>
+        <h2>Finance Calculator App</h2>
+        <h5>Swift (December 2021 - January 2022)</h5><br>
+        <p>Coded a primitive iOS application that uses user input to calculate and display financial interest and monetary gains across different SwiftUI content views. </p>
+        <br>
+<!--    <h2>TITLE HEADING</h2>-->
+<!--    <h5>Title description, Sep 2, 2017</h5>-->
+<!--    <div class="fakeimg" style="height:200px;">Image</div>-->
+<!--    <p>Some text..</p>-->
+<!--    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>-->
       </div>
     </div>
   </section>
   
   <div class="footer">
-    <h2>Footer</h2>
+    <h2>coded and designed by michael banna.</h2>
   </div>
   
   </body>
