update jan 17th

--- a/index.html.tmp.html
+++ b/index.html.tmp.html
@@ -101,7 +101,7 @@
         <h5>Python, HTML, CSS, Javascript (January 2022)</h5><br>
         <p>Online playlist generator using Spotify API integration and tracks mentioned on a Reddit forum.</p><br>
         <p><i>Group project, in charge of front-end & UI/UX</i></p><br>
-        <img src = "/img/redbot.png">
+        <img src = "file:///Users/mike/Documents/GitHub/bmchl.github.io/img/redbot.png">
         </div class="project"><br>
         <div class="project">
         <h3> For more graphic design work, please visit <a href="https://www.behance.net/bannamichael/" target="_blank">my Behance</a>.</h3>
@@ -110,7 +110,7 @@
 
   </section id="projects">
 
-        <div class="footer"><a href="/cv/MICHAEL_BANNA_CV_ENG.pdf" download="Michael Banna.pdf">
+        <div class="footer"><a href="file:///Users/mike/Documents/GitHub/bmchl.github.io/cv/MICHAEL_BANNA_CV_ENG.pdf" download="Michael Banna.pdf">
           
     <h4><i>download resume (updated jan 17, 2022)</i></h4><br>
   </a>
