--- a/style.css.tmp.html
+++ b/style.css.tmp.html
@@ -1,3 +1,4 @@
+<style>
 @import (./fonts/SFMonoBold.otf);
 @import (./fonts/SFMonoBoldItalic.otf);
 @import (./fonts/SFMonoRegular.otf);
@@ -264,7 +265,4 @@ ul {
   opacity:1;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
 }
-.footer a{
-  color: #F2EBDA;
-  font-weight: 700;
-}
+</style>
